--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "google": "^2.1.0",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-dom": "^18.0.0",
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "recompose": "^0.30.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
